prevent changelog layout break when using browser zoom under webkit

--- a/css/changelog.styl
+++ b/css/changelog.styl
@@ -57,6 +57,7 @@
 
     ul.changes li
         margin-bottom 1px
+        clear both
 
     .titlebox
         line-height 20px
